# akashic-records

./: .env.example  .gitignore  README.md  akasha_cli.py  diagnose_akasha.py  docker-compose.yml  download_model.py  pyproject.toml  test_akasha_pillars.py  test_mutation_trigger.py  test_redactor_direct.py
.github/workflows/: main.yml  pypi-publish.yml
akasha-skills/architect/: SKILL.md
akasha-skills/artifacts-builder/: SKILL.md
akasha-skills/changelog/: SKILL.md
akasha-skills/research/: SKILL.md
akasha-skills/subagent-dev/: SKILL.md
akashic_records_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/: Dockerfile  action_engine.py  ai_engine.py  alembic.ini  associative_memory.py  auth_utils.py  backup_engine.py  bifrost_bridge.py  blockchain_adapter.py  bootstrap.py  celery_worker.py  chronos_engine.py  context_fabric.py  database.py  env_sensor.py  eye_engine.py  finance_engine.py  graph_engine.py  ingest_engine.py  intel_engine.py  learning_engine.py  librarians.py  lightweight_graph.py  main.py  models.py  multimodal_engine.py  neural_core.py  ouro_subchain.py  p2p_node.py  pod_manager.py  privacy_engine.py  privacy_utils.py  requirements.txt  sensory_ingest.py  simulation_engine.py  srs_engine.py  telemetry_ingest.py
backend/alembic/: env.py
backend/rust_p2p/: Cargo.toml
backend/rust_p2p/src/: main.rs
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend-react/: package-lock.json  package.json  vite.config.js
mobile_node/: README.md  mobile_agent.py  mobile_app.py  sensor_client.py
(+94 files in other folders)
