[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "akashic-records-lib"
version = "0.1.5"
description = "Sovereign Neural Core CLI for the Akasha Universal Library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "rich",
]

[tool.setuptools]
packages = ["backend", "backend.scripts"]

[project.scripts]
akasha = "backend.scripts.akasha_cli:cli"
