[package]
name = "akasha-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.21"
sha2 = "0.10"
ort = "1.16"
ndarray = "0.15"
tokenizers = "0.13"
